[project]
name = "ciso_agent_phishing"
version = "1"
description = "CISO Agent, an MCP server tool that serves as your organization's Chief Security Information Officer, helping agents stay safe againt phishing attacks."
authors = [
  { name = "Jose Miguel Luna", email = "jlunamugica26@gsb.columbia.edu" },
  { name = "Ron Litvak", email = "rlitvak26@gsb.columbia.edu" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastmcp",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "pypdf",
    "faiss-cpu",
    "tiktoken"
    ]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
