[project]
name = "ciso_agent_phishing"
version = "1"
description = "CISO Agent, an MCP server tool that serves as your organization's Chief Security Information Officer, helping agents stay safe againt phishing attacks."
authors = [
  { name = "Jose Miguel Luna", email = "jlunamugica26@gsb.columbia.edu" },
  { name = "Ron Litvak", email = "rlitvak26@gsb.columbia.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "pypdf>=6.4.0",
    "faiss-cpu>=1.13.0",
    "tiktoken>=0.12.0"
    ]

[project.optional-dependencies]
dev = []